# rest_client

./: .gitignore  pyproject.toml
arhiv/restclient/: client.py  utilities.py
rest_client/: client.py
restclient/: client.py
