[project]
name = "restclient"
version = "0.1.0"
description = "REST client for testing with log"
authors = [
    { name = "Supervlad52", email = "vlad.pestov52@gmail.com" }
]
readme = "README.md"
packages = [{include = "rest_client"}]
requires-python = ">=3.10,<4.0"

dependencies = [
    "swagger-coverage @ git+https://github.com/Supervlad52/swagger-coverage-py.git@master",
    "httpx (>=0.28.1,<0.29.0)",
    "curlify2 (>=2.0.0,<3.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mypy = "^1.17.1"
ruff = "^0.13.0"